@@ -1,9 +1,8 @@
 """
-This will add a parent field and a parent_node field to all nodes.
-Root  will be the primary key of the originating parent node.
+This will add a root and parent_node fields to all nodes.
+Root will be the primary key of the originating parent node.
 Parent_node will be the first primary parent
 Done so that you can filter on both root nodes and parent nodes with a DB query
-
 """
 
 import sys
@@ -18,57 +17,79 @@ logging.basicConfig(level=logging.INFO)
 logger = logging.getLogger(__name__)
 
 
-def do_migration():
-    init_app(routes=False)
-    logger.warn('parent and root fields will be added to all nodes.')
-    all_nodes = models.Node.find(Q('is_deleted', 'eq', False) & Q('root', 'eq', None))
+def do_migration(dry=True):
+    app = init_app(routes=True)
+    all_nodes = models.Node.find(
+        Q('is_deleted', 'eq', False) &
+        (Q('root', 'eq', None) | Q('root', 'exists', False))
+    )
     all_nodes_count = all_nodes.count()
     touched_counter = 0
-    logger.info('There are {} total nodes'.format(all_nodes_count))
+    errored_nodes = []
+    logger.info('Migrating {} nodes'.format(all_nodes_count))
     for node in all_nodes:
-        if not getattr(node, '_parent_node', None):
-            touched_counter += 1
-            node.save()
-            children = [child for child in node.get_descendants_recursive(include=lambda n: n.primary and not n.is_deleted)]
-            logger.info(
-                '{}/{}: touched node {} with children {}'.format(
-                    touched_counter,
-                    all_nodes_count,
-                    node._id,
-                    [child._id for child in children]
-                )
-            )
-
-            assert node.root._id == node._id
-            assert not getattr(node, 'parent_node', None)
-            logger.info('Parent Node Saving: Saved Node {} with root {}'.format(node._id, node.root))
-
-            for child in children:
+        with TokuTransaction():
+            if not getattr(node, '_parent_node', None):
                 touched_counter += 1
+                logger.info('Attempting to save node {}'.format(node._id))
+                if not dry:
+                    try:
+                        with app.test_request_context():
+                            node.save()
+                    except (KeyError, RuntimeError) as err:  # Workaround for nodes whose files were unmigrated in a previous migration
+                        logger.error('Error occurred when trying to save node: {}'.format(node._id))
+                        logger.exception(err)
+                        errored_nodes.append(node)
+                children = [child for child in node.get_descendants_recursive(include=lambda n: n.primary and not n.is_deleted)]
                 logger.info(
-                    '{}/{}: touched node {} with parent {}'.format(
+                    '{}/{}: touched node {} with children {}'.format(
                         touched_counter,
                         all_nodes_count,
-                        child._id,
-                        child.parent_id
+                        node._id,
+                        [child._id for child in children]
                     )
                 )
 
-                child.save()
-                logger.info('The child root id is {} and the node id is {}'.format(child.root._id, node._id))
-                logger.info('Child Node saved: Verifying that save Node {} with root {}'.format(child._id, child.root))
-                assert child.parent_node._id == child.parent_id
-                assert child.root._id == node._id
+                assert node.root._id == node._id
+                assert not getattr(node, 'parent_node', None)
+                logger.info('Parent Node Saving: Saved Node {} with root {}'.format(node._id, node.root))
 
-    assert all_nodes_count == touched_counter
+                for child in children:
+                    touched_counter += 1
+                    logger.info(
+                        '{}/{}: touched node {} with parent {}'.format(
+                            touched_counter,
+                            all_nodes_count,
+                            child._id,
+                            child.parent_id
+                        )
+                    )
+
+                    if not dry:
+                        try:
+                            with app.test_request_context():
+                                child.save()
+                        except (KeyError, RuntimeError) as err:  # Workaround for nodes whose files were unmigrated in a previous migration
+                            logger.error('Error occurred when trying to save child: {}'.format(node._id))
+                            logger.exception(err)
+                            errored_nodes.append(child)
+                    logger.info('\tChild Node saved: Verifying that save Node {} with root {}'.format(child._id, child.root))
+                    # Need this check due to an inconsistency in prod data where
+                    # a node's parent is deleted by the node itself is not deleted
+                    if child.parent_node:
+                        assert child.parent_node._id == child.parent_id
+                        assert child.root._id == node._id
+                    else:
+                        logger.error('Child {} has a null parent node')
+                        logger.error('This may be because its parent was deleted without the child being deleted')
+
+    logger.error('{} errored nodes:'.format(len(errored_nodes)))
+    logger.error('\n'.join([each._id for each in errored_nodes]))
 
 
 def main(dry=True):
     init_app(set_backends=True, routes=False)  # Sets the storage backends on all models
-    with TokuTransaction():
-        do_migration()
-        if dry:
-            raise Exception('Abort Transaction - Dry Run')
+    do_migration(dry=dry)
 
 
 if __name__ == '__main__':
