@@ -10,6 +10,11 @@ Changelog
 - APIv2: Support view-only link keys.
 - APIv2: Support filtering against multiple ids, e.g. ?filter[id]=abc12,def34
 
+Migrations
+----------
+
+- scripts.migration.migrate_root_and_parent_on_node
+
 0.60.0 (2015-12-17)
 ===================
 
